--- a/44_AppIfood/app/build.gradle
+++ b/44_AppIfood/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:15.0.0'
     implementation 'com.google.firebase:firebase-storage:15.0.0'
 
+    //Material
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 }
