--- a/44_AppIfood/app/src/main/AndroidManifest.xml
+++ b/44_AppIfood/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.appifood">
 
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppIfood">
-        <activity android:name=".activity.HomeActivity"></activity>
+
+        <activity
+            android:name=".activity.ConfiguracoesUsuarioActivity"
+            android:parentActivityName=".activity.HomeActivity"/>
+
+        <!-- android:parentActivityName=".activity.EmpresaActivity" -> Quam esta dentro de quem parentesco (Parent) -->
+        <activity
+            android:name=".activity.ConfiguracoesEmpresaActivity"
+            android:parentActivityName=".activity.EmpresaActivity" />
+
+        <activity
+            android:name=".activity.NovoProdutoEmpresaActivity"
+            android:parentActivityName=".activity.EmpresaActivity" />
+
+        <activity android:name=".activity.EmpresaActivity" />
+        <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.AutenticationActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
